# hookscore

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py
hookscore/: __init__.py  scorer.py
tests/: test_scorer.py
